--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "vite": "^2.7.3",
+    "vite-plugin-full-reload": "^0.2.2",
     "vite-plugin-ruby": "^3.0.4"
   }
 }
