--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^4.1.3",
+    "postcss": "^8.4.5",
     "sass": "^1.45.0",
     "vite": "^2.7.3",
     "vite-plugin-full-reload": "^0.2.2",
